# arena

./: .env.example  .gitignore  README.md
.github/workflows/: arena-gate.yml  ci.yml  respan-smoke.yml
arena/: README.md  pyproject.toml
arena-web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
arena-web/app/: globals.css  layout.tsx  page.tsx
arena-web/app/compare/: compare_view.tsx  page.tsx
arena-web/components/: Chip.tsx  ScoreBar.tsx
arena-web/lib/: db.ts  format.ts
arena-web/scripts/: audit.ts  screenshots.ts
arena/src/arena/: __init__.py  cli.py  config.py  gate.py  project.py  tracing.py
arena/src/arena/evals/: __init__.py  dataset.py  evaluators.py  runner.py
arena/src/arena/gateway/: __init__.py  cache.py  client.py  fallback.py  pricing.py
arena/src/arena/judges/: __init__.py  base.py  ensemble.py  pairwise.py  reference.py  rubric.py
arena/src/arena/mine/: __init__.py  cluster.py  label.py  miner.py  source.py
arena/src/arena/optimizer/: __init__.py  protegi.py
arena/src/arena/store/: __init__.py  models.py
arena/tests/integration/: test_gateway_client.py
arena/tests/unit/: test_cache.py  test_cache_lru.py  test_cache_semantic.py  test_cli_judge.py  test_cli_optimize.py  test_cli_run_e2e.py  test_cli_runs.py  test_cli_smoke.py  test_config.py  test_dataset.py  test_evaluators.py  test_fallback.py  test_gate.py  test_gateway_errors.py  test_judges_ensemble.py  test_judges_pairwise.py  test_judges_reference.py  test_judges_rubric.py  test_mine_cluster_and_miner.py  test_mine_source.py  test_pricing.py  test_project_config.py  test_runner.py  test_runner_persistence.py  test_store.py  test_tracing.py  test_tracing_sdk.py
examples/support-triage/: README.md  arena.config.yaml  dataset.jsonl  demo_drive.py
examples/support-triage/fixtures/: traces.jsonl
examples/support-triage/prompts/: v0-baseline.md  v1-optimized.md
