[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arena"
version = "0.1.0"
description = "LLM regression-testing gym for Respan — evals, LLM-as-judge, prompt optimization, CI gate."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Parsa Faraji Alamouti" }]
keywords = ["llm", "evals", "prompt-optimization", "respan", "keywords-ai", "llm-as-judge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "openai>=1.40",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "pyyaml>=6.0",
    "tenacity>=8.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
mine = [
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "hdbscan>=0.8.37",
]
tracing = [
    # Respan tracing SDK. Pinned loosely; Respan is renaming from keywords-ai.
    # Both packages publish the same interface; install whichever resolves.
    "respan>=0.1; platform_system != 'unknown'",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-vcr>=1.0.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
]

[project.scripts]
arena = "arena.cli:app"

[project.urls]
Homepage = "https://github.com/parsafaraji/arena"
Repository = "https://github.com/parsafaraji/arena"

[tool.hatch.build.targets.wheel]
packages = ["src/arena"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# B008: typer depends on function-call defaults (typer.Option / typer.Argument).
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
    "integration: tests that record/replay HTTP (pytest-vcr)",
    "respan: tests that hit the real Respan API (gated by RESPAN_API_KEY)",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
